Passo 10 tutorial (Deployment)

--- a/_config.yml
+++ b/_config.yml
@@ -18,3 +18,8 @@ defaults:
       path: ""
     values:
       layout: "default"
+  
+plugins:
+  - jekyll-feed
+  - jekyll-sitemap
+  - jekyll-seo-tag
