Adicionando curriculo e retirando newslatter

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,15 +6,7 @@ topmenu:
   url: ""
 
 - title: Currículo
-  url: "about/"
-
-- title: Contato
-  url: "contact/"
-
-- title: Get this theme  
-  url: https://bootstrapstarter.com/template-affiliates-bootstrap-jekyll/
-  class: "ml-2 btn btn-dark text-white px-3"
-  external: true
+  url: curriculo
 
 # Footer Menu
 footermenu:
