--- a/_config.yml
+++ b/_config.yml
@@ -46,6 +46,7 @@ social:
   email: rony.vonn977@gmail.com
   linkedin: https://www.linkedin.com/in/rony-vonn-costa-603697261/
   whatsapp: "https://wa.me/61981779401"
+  github: https://github.com/ronycosta01
 # Plugins
 plugins: 
 - jekyll-paginate
