Mudança layout (Imagem principal, ad here, e posts)

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # OBS: Não criei um novo arquivo chamado _config.yml, pois o mesmo já existia e não é possível criar com o mesmo nome.
-title: "Bem-vindo ao meu Blog"
+title: "Aprendizado contínuo"
 email: rony.vonn977@gmail.com
 timezone: UTC-3
 baseurl: ""
